--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ STRIPE_PUBLISHABLE_KEY=pk_test_51QToTbRpt1ThAndRX5cd2Gb9lfXy0gASybzew9nXYlfYoW0U
 
 CLIENT_URL=http://localhost:3000
 
-
+NODE_ENV=development
 
 
 # jFSBsxZhsZgV7CVR
