--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5000
 
-MONGO_DB_URI= mongodb+srv://oshnicchhetri75:jFSBsxZhsZgV7CVR@cluster0.pu3g3.mongodb.net/e-commerce-db?retryWrites=true&w=majority&appName=Cluster0
+MONGO_DB_URI=mongodb+srv://oshnicchhetri75:jFSBsxZhsZgV7CVR@cluster0.pu3g3.mongodb.net/e-commerce-db?retryWrites=true&w=majority&appName=Cluster0
 
 
 JWT_SECRET=Zlfw9zauACOz9yLn7+47R3KI5rjq5EUyCQ6qotP4 
@@ -23,7 +23,7 @@ STRIPE_PUBLISHABLE_KEY=pk_test_51QToTbRpt1ThAndRX5cd2Gb9lfXy0gASybzew9nXYlfYoW0U
 
 CLIENT_URL=http://localhost:3000
 
-NODE_ENV=development
+
 
 
 # jFSBsxZhsZgV7CVR
