--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "stripe": "^17.1.0"
+    "stripe": "^17.1.0",
+    "mongodb" : "6.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
