--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "e-commerce",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "backend/server.js",
   "scripts": {
     "server": "nodemon backend/server.js",
-    "start" : "node backend/server.js",
-    "build" : "npm install && npm install --prefix frontend && npm run build --prefix frontend"
-    },
+    "start": "node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+  },
   "keywords": [],
   "author": "",
   "type": "module",
@@ -20,8 +20,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "stripe": "^17.1.0",
-    "mongodb" : "6.12.0"
+    "mongodb": "^6.11.0",
+    "stripe": "^17.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
