--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0",
     "mongodb": "^6.11.0",
+    "mongoose": "^8.7.0",
     "stripe": "^17.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "vite": "^6.0.7"
   }
 }
