--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "e-commerce",
   "version": "1.0.0",
-  "description": "",
+  "description": "E-commerce application with backend and frontend",
   "main": "backend/server.js",
   "scripts": {
     "server": "nodemon backend/server.js",
@@ -26,5 +26,8 @@
   "devDependencies": {
     "nodemon": "^3.1.7",
     "vite": "^6.0.7"
+  },
+  "engines": {
+    "node": ">=16.x"
   }
 }
