--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "npm run clean && vite build",
+    "clean": "rm -rf dist",
+    "lint": "eslint . --ext .js,.jsx --max-warnings 0",
+    "preview": "vite preview",
+    "start": "concurrently \"npm run server --prefix ../backend\" \"npm run dev\""
   },
   "dependencies": {
     "@stripe/stripe-js": "^5.4.0",
@@ -24,6 +26,7 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^8.2.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -32,5 +35,10 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^5.4.11"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
