--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "e-commerce",
   "version": "1.0.0",
-  "description": "E-commerce application with backend and frontend",
-  "main": "backend/server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "server": "nodemon backend/server.js",
-    "start": "node backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+  "server": "nodemon backend/server.js",
+  "start": "node backend/server.js",
+  "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
@@ -15,19 +15,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.11.0",
-    "mongoose": "^8.7.0",
-    "stripe": "^17.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7",
-    "vite": "^6.0.7"
-  },
-  "engines": {
-    "node": ">=16.x"
+    "mongoose": "^8.9.4",
+    "nodemon": "^3.1.9",
+    "stripe": "^17.5.0"
   }
 }
