--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "e-commerce",
   "version": "1.0.0",
-  "description": "",
+  "description": "E-commerce backend and frontend",
   "main": "index.js",
   "scripts": {
     "server": "nodemon backend/server.js",
     "start": "node backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "prod": "npm install --production && npm run build --prefix frontend", 
+    "client": "npm run build --prefix frontend", 
+    "deploy": "npm run build && npm run start", 
+    "heroku-postbuild": "npm run build --prefix frontend"  
   },
   "keywords": [],
   "author": "",
@@ -22,5 +26,8 @@
     "mongoose": "^8.9.4",
     "nodemon": "^3.1.9",
     "stripe": "^8.0.0"
+  },
+  "devDependencies": {
+    "@types/stripe": "^8.0.417"
   }
 }
