--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "E-commerce backend and frontend",
   "main": "index.js",
+  "types" : "module",
   "scripts": {
     "server": "nodemon backend/server.js",
     "start": "node backend/server.js",
