--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "E-commerce backend and frontend",
   "main": "index.js",
+  "types": "module",
   "scripts": {
     "server": "nodemon backend/server.js",
     "start": "node backend/server.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-    "prod": "npm install --production && npm run build --prefix frontend", 
-    "client": "npm run build --prefix frontend", 
-    "deploy": "npm run build && npm run start", 
-    "heroku-postbuild": "npm run build --prefix frontend"  
+    "prod": "npm install --production && npm run build --prefix frontend",
+    "client": "npm run build --prefix frontend",
+    "deploy": "npm run build && npm run start",
+    "heroku-postbuild": "npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
     "nodemon": "^3.1.9",
-    "stripe": "^8.0.0"
+    "stripe": "^17.5.0"
   },
   "devDependencies": {
     "@types/stripe": "^8.0.417"
