--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
     "nodemon": "^3.1.9",
-    "stripe": "^17.5.0"
+    "stripe": "^17.5.0",
     "gopd": "^1.2.0",
   },
   "devDependencies": {
