--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "mongoose": "^8.9.4",
     "nodemon": "^3.1.9",
     "stripe": "^17.5.0",
-    "gopd": "^1.2.0",
+    "gopd": "^1.2.0"
   },
   "devDependencies": {
     "@types/stripe": "^8.0.417"
