--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,8 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.0",
-    "stripe": "^8.0.0"
+    "react-router-dom": "^7.1.0"
+    
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
