--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,3 +1,3 @@
 {
-    "rewrites" : [{ "source": "/(.*)", "destinaiton" : "/index.html"}]
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
