--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,6 +12,8 @@
         }
     ],
     "routes": [
-        {"src" : "/(.*)", "dest": "/"}
-    ]
+    { "src": "/api/(.*)", "dest": "/server.js" },
+    { "src": "/static/(.*)", "dest": "/src/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
+]
 }
