vecel file update

--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,28 @@
 {
-    "installCommand" : "npm install --legacy-peer-deeps",
-    "version" : 2,
-    "builds" : [
+    "installCommand": "npm install --legacy-peer-deps",
+    "version": 2,
+    "builds": [
         {
-            "src": "server.js",
-            "use" : "@vercel/node"
+            "src": "backend/server.js",
+            "use": "@vercel/node"
         },
         {
-            "src" : "src/**/*",
-            "use" : "@vercel/static"
+            "src": "frontend/dist/**/*",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
-    { "src": "/api/(.*)", "dest": "/backend/server.js" },
-    { "src": "/static/(.*)", "dest": "/src/$1" },
-    { "src": "/(.*)", "dest": "/index.html" }
-]
+        {
+            "src": "/api/(.*)",
+            "dest": "/api"
+        },
+        {
+            "src": "/static/(.*)",
+            "dest": "/frontend/dist/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
+        }
+    ]
 }
