--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
     "nodemon": "^3.1.9",
-    "stripe": "^17.5.0"
+    "stripe": "^17.5.0",
+    "vercel.json": "^0.1.0"
   },
   "devDependencies": {
     "@types/stripe": "^8.0.417"
