--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
             "use": "@vercel/node"
         },
         {
-            "src": "frontend/dist/**/*",
-            "use": "@vercel/static"
+            "src": "/(.*)",
+            "dest": "/backend/server.js"
         }
     ],
     "routes": [
@@ -17,12 +17,9 @@
             "dest": "/backend/server.js"
         },
         {
-            "src": "/static/(.*)",
-            "dest": "/frontend/dist/"
-        },
-        {
             "src": "/(.*)",
-            "dest": "/frontend/dist/index.html"
+            "dest": "/backend/server.js"
         }
     ]
 }
+
