--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "/backend/server.js"
+            "use": "/backend/server.js"
         }
     ],
     "routes": [
