--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@vitejs/plugin-react-swc": "^3.7.2",
     "dotenv": "^16.4.7",
     "e-commerce": "file:..",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
@@ -36,5 +38,4 @@
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.11"
   }
-  
 }
